--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 			</section>
 			<section data-markdown="slides/130-histoire-ia-graphisme.md" data-separator="^\n\n\n"
 				data-separator-vertical="^\n\n"></section>
+				<section data-markdown="slides/131-image-histoire.md">
+			</section>
 			<section data-markdown="slides/140-definitions-1.md">
 			</section>
 			<section data-markdown="slides/150-definitions-2.md">
